test/conformance/chainsaw/validate/clusterpolicy/cornercases/variable-substitution-failure-messages-deprecated/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: variable-substitution-failure-messages
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: uid-groups-fsgroup-validate
  - name: step-02  
    try:  
    - script:  
        content: kubectl apply -f pod.yaml  
        check:  
          ($error != null): true
          (contains($stderr, 'denied the request')): true
          (contains($stderr, 'uid-groups-fsgroup-validate')): true
          (contains($stderr, 'check-runasuser')): true
          (contains($stderr, '9999 | 4000')): true
